# contextus

./: .gitignore  README.md  SPEC.md  build_graph.py  compare_step5_strategies.py  export_chunk_audit.py  extract.py  label_chunk_audit.py  pyproject.toml  requirements.txt  run.py  train_chunk_model.py
chunk_runs/block_vs_level4_20260509_214340/: 09-Inheritance_fowler_anth1210_24.block.step5.json  09-Inheritance_fowler_anth1210_24.block.step5.md  09-Inheritance_fowler_anth1210_24.block.step6.json  09-Inheritance_fowler_anth1210_24.block.step6.md  09-Inheritance_fowler_anth1210_24.proposition_walk.step5.json  09-Inheritance_fowler_anth1210_24.proposition_walk.step5.md  09-Inheritance_fowler_anth1210_24.proposition_walk.step6.json  09-Inheritance_fowler_anth1210_24.proposition_walk.step6.md  09-Inheritance_fowler_anth1210_24.semantic_walk.step5.json  09-Inheritance_fowler_anth1210_24.semantic_walk.step5.md  closest-pair.block.step5.json  summary.json  (+13 more)
contextus/: __init__.py  edge.py  embeddings.py  graph.py  llm.py  node.py  router.py  store.py  traversal.py  weights.py
docs/: vast-doclayout-api.md
tests/: test_builder_audit.py  test_builder_chunker.py  test_builder_consolidation.py  test_builder_edge_builder.py  test_builder_labeler.py  test_builder_node_builder.py  test_builder_node_candidate.py  test_builder_pipeline.py  test_builder_preprocessor.py  test_builder_training.py  test_embeddings.py  test_graph.py  test_ingestion_handlers.py  test_ingestion_models.py  test_ingestion_pdf_analyzer.py  test_ingestion_pdf_content.py  test_ingestion_router.py  test_ingestion_storage.py  test_integration.py  test_llm.py  test_router.py  test_store.py  test_traversal.py  test_weights.py
(+47 files in other folders)
