[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextus"
version = "0.1.0"
description = "A directed, weighted knowledge graph with LLM-powered traversal."
requires-python = ">=3.10"
dependencies = [
    "cerebras_cloud_sdk",
    "python-dotenv",
    "sentence-transformers>=2.2.0",
    "hdbscan>=0.8.33",
    "numpy>=1.24.0",
    "pymupdf",
    "pdfplumber",
    "huggingface_hub",
    "doclayout-yolo",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
